A11Y bugfixes of DB Explorer UI.

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -118,6 +118,7 @@ DecimalDigitsDescription = Decimal digits
 Position = Position
 PositionDescription = Position
 Unique = Unique
+Unique_Mnemonic = U
 UniqueDescription = Unique
 Qualifier = Qualifier
 QualifierDescription = Qualifier
@@ -141,6 +142,8 @@ ForeignColumn = Column
 ForeignColumnDescription = Column
 KeySeq = Keyseq
 KeySeqDescription = Keyseq
+
+ACS_UniqueA11yDesc = Select this checkbox to mark the index as unique.
 
 # Booleans
 
@@ -288,9 +291,24 @@ PROP_capitializeUsername = Capitalize username
 
 AddDriverDialogTitle = Add JDBC Driver
 AddDriverDriverName = Name:
+AddDriverDriverName_Mnemonic = N
 AddDriverDriverURL = Driver:
+AddDriverDriverURL_Mnemonic = D
 AddDriverDatabasePrefix = Database URL prefix:
+AddDriverDatabasePrefix_Mnemonic = U
 AddDriverURLNotes = Note: the package (ZIP/JAR, typically) containing the driver code must be in the NetBeans classpath (add to the lib/ext/ directory).
+
+ACS_AddDriverDriverNameA11yDesc = Name of the driver.
+ACS_AddDriverDriverNameTextFieldA11yName = Driver text field
+ACS_AddDriverDriverNameTextFieldA11yDesc = Name of the driver.
+ACS_AddDriverDriverURLA11yDesc = Driver class.
+ACS_AddDriverDriverURLTextFieldA11yName = Driver class text field
+ACS_AddDriverDriverURLTextFieldA11yDesc = Driver class.
+ACS_AddDriverDatabasePrefixA11yDesc = Database URL prefix.
+ACS_AddDriverDatabasePrefixTextFieldA11yName = Database URL prefix text field
+ACS_AddDriverDatabasePrefixTextFieldA11yDesc = Prefix to be used as a template to specify the database URL.
+ACS_AddDriverURLNotesA11yName = Add Driver dialog description
+ACS_AddDriverURLNotesA11yDesc = Note: the package (ZIP/JAR, typically) containing the driver code must be in the NetBeans classpath (add to the lib/ext/ directory).
 
 # Test driver dialog
 
@@ -334,21 +352,59 @@ RemoveConnectionErrorPrefix = Unable to remove connection,
 
 NewConnectionDialogTitle = New Database Connection
 NewConnectionDriverName = Name:
+NewConnectionDriverName_Mnemonic = N
 NewConnectionDriverClass = Driver:
+NewConnectionDriverClass_Mnemonic = D
 NewConnectionDatabaseURL = Database URL:
+NewConnectionDatabaseURL_Mnemonic = A
 NewConnectionUserName = User Name:
+NewConnectionUserName_Mnemonic = U
 NewConnectionPassword = Password:
+NewConnectionPassword_Mnemonic = P
 NewConnectionRememberPassword = Remember password during this session
+NewConnectionRememberPassword_Mnemonic = R
+
+ACS_NewConnectionDriverNameA11yDesc = Connection name.
+ACS_NewConnectionDriverNameComboBoxA11yName = Connection name combo box
+ACS_NewConnectionDriverNameComboBoxA11yDesc = Combo box containing all connection names.
+ACS_NewConnectionDriverClassA11yDesc = Driver class.
+ACS_NewConnectionDriverClassComboBoxA11yName = Driver class combo box
+ACS_NewConnectionDriverClassComboBoxA11yDesc = Combo box containing all driver classes.
+ACS_NewConnectionDatabaseURLA11yDesc = Database URL.
+ACS_NewConnectionDatabaseURLTextFieldA11yName = Database URL text field
+ACS_NewConnectionDatabaseURLTextFieldA11yDesc = Database URL.
+ACS_NewConnectionUserNameA11yDesc = Database user name.
+ACS_NewConnectionUserNameTextFieldA11yName = Database user name text field
+ACS_NewConnectionUserNameTextFieldA11yDesc = Database user name.
+ACS_NewConnectionPasswordA11yDesc = Database password.
+ACS_NewConnectionPasswordTextFieldA11yName = Database password text field
+ACS_NewConnectionPasswordTextFieldA11yDesc = Database password.
+ACS_NewConnectionRememberPasswordA11yDesc = Select this checkbox to remember password during this session.
 
 # Create table dialog
 
 CreateTableName = Table name:
+CreateTableName_Mnemonic = T
 CreateTableUntitledName = Untitled
 CreateTableOwner = Owner:
+CreateTableOwner_Mnemonic = O
 CreateTableColumns = Columns
 CreateTableAddButtonTitle = Add column
+CreateTableAddButtonTitle_Mnemonic = A
 CreateTableRemoveButtonTitle = Remove
+CreateTableRemoveButtonTitle_Mnemonic = R
 CreateTableDialogTitle = Create Table
+
+ACS_CreateTableNameA11yDesc = Table name.
+ACS_CreateTableNameTextFieldA11yName = Table name text field
+ACS_CreateTableNameTextFieldA11yDesc = Table name.
+ACS_CreateTableOwnerA11yDesc = Owner of this table.
+ACS_CreateTableOwnerComboBoxA11yName = Owner combo box
+ACS_CreateTableOwnerComboBoxA11yDesc = Combo box containing all available owners.
+ACS_CreateTableColumnTableA11yName = Table of columns
+ACS_CreateTableColumnTableA11yDesc = Table of columns and their parameters.
+ACS_CreateTableAddButtonTitleA11yDesc = Add column to the table.
+ACS_CreateTableRemoveButtonTitleA11yDesc = Remove column from the table.
 
 CreateTable_0 = Key
 CreateTable_1 = Index
@@ -373,18 +429,53 @@ EXC_UnableToCreateTable = Unable to create table {0}, {1}.
 
 AddColumnDialogTitle = Add Column
 AddTableColumnName = Name:
+AddTableColumnName_Mnemonic = N
 AddTableColumnType = Type:
+AddTableColumnType_Mnemonic = T
 AddTableColumnSize = Size:
+AddTableColumnSize_Mnemonic = S
 AddTableColumnScale = Scale:
+AddTableColumnScale_Mnemonic = A
 AddTableColumnDefault = Default:
+AddTableColumnDefault_Mnemonic = D
 AddTableColumnConstraintsTitle = Constraints
 AddTableColumnConstraintPKTitle = Primary key
+AddTableColumnConstraintPKTitle_Mnemonic = P
 AddTableColumnConstraintIXTitle = Index
 AddTableColumnConstraintUniqueTitle = Unique
+AddTableColumnConstraintUniqueTitle_Mnemonic = U
 AddTableColumnConstraintNullTitle = Null
+AddTableColumnConstraintNullTitle_Mnemonic = L
 AddTableColumnConstraintCheckTitle = Check:
 AddTableColumnIndexName = Index:
+AddTableColumnIndexName_Mnemonic = I
 AddTableColumnCheckTitle = Check:
+AddTableColumnCheckTitle_Mnemonic = C
+
+ACS_AddTableColumnNameA11yDesc = Column name.
+ACS_AddTableColumnNameTextFieldA11yName = Column name text field
+ACS_AddTableColumnNameTextFieldA11yDesc = Column name.
+ACS_AddTableColumnTypeA11yDesc = Column type.
+ACS_AddTableColumnTypeComboBoxA11yName = Column type combo box
+ACS_AddTableColumnTypeComboBoxA11yDesc = Combo box containing all column types.
+ACS_AddTableColumnSizeA11yDesc = Column size.
+ACS_AddTableColumnSizeTextFieldA11yName = Column size text field
+ACS_AddTableColumnSizeTextFieldA11yDesc = Column size.
+ACS_AddTableColumnScaleA11yDesc = Column scale.
+ACS_AddTableColumnScaleTextFieldA11yName = Column scale text field
+ACS_AddTableColumnScaleTextFieldA11yDesc = Column scale.
+ACS_AddTableColumnDefaultA11yDesc = Default column value.
+ACS_AddTableColumnDefaultTextFieldA11yName = Default column value text field
+ACS_AddTableColumnDefaultTextFieldA11yDesc = Default column value.
+ACS_AddTableColumnConstraintPKTitleA11yDesc = Select this checkbox to mark the column as primary key.
+ACS_AddTableColumnConstraintUniqueTitleA11yDesc = Select this checkbox to mark the column as unique.
+ACS_AddTableColumnConstraintNullTitleA11yDesc = Select this checkbox to allow null values for this column.
+ACS_AddTableColumnIndexNameA11yDesc = Select this checkbox to add the column to an existing index or create a new one.
+ACS_AddTableColumnIndexNameComboBoxA11yName = Index combo box
+ACS_AddTableColumnIndexNameComboBoxA11yDesc = Combo box containing all available indexes.
+ACS_AddTableColumnCheckTitleA11yDesc = Select this checkbox to add constraints to the column.
+ACS_AddTableColumnCheckTextAreaA11yName = Constraints text area
+ACS_AddTableColumnCheckTextAreaA11yDesc = Set constraints for the column in this text area.
 
 # Drop table dialog
 
@@ -410,7 +501,13 @@ DropProcedureErrorPrefix = Unable to drop procedure,
 
 AddIndexTitle = Add Index
 AddIndexName = Index name:
+AddIndexName_Mnemonic = I
 AddIndexLabel = Select the items you want to add to the index:
+
+ACS_AddIndexNameA11yDesc = Name of the index.
+ACS_AddIndexNameTextFieldA11yName = Index name text field
+ACS_AddIndexNameTextFieldA11yDesc = Name of the index.
+ACS_AddIndexLabelA11yDesc = Select the items you want to add to the index:
 
 # Add to index dialog
 
@@ -421,8 +518,17 @@ AddToIndexLabel = Column:
 
 AddViewTitle = Add View
 AddViewName = View name:
+AddViewName_Mnemonic = V
 AddViewLabel = SQL expression to create view:
+AddViewLabel_Mnemonic = S
 MSG_ViewsAreNotSupported = {0} does not support views.
+
+ACS_AddViewNameA11yDesc = Name of the view.
+ACS_AddViewNameTextFieldA11yName = Name of the view.
+ACS_AddViewNameTextFieldA11yDesc = Name of the view.
+ACS_AddViewLabelA11yDesc = SQL expression to create view.
+ACS_AddViewTextAreaA11yName = SQL expression text area
+ACS_AddViewTextAreaA11yDesc = SQL expression to create view.
 
 # Grab and recreate table
 
@@ -449,8 +555,21 @@ DataViewNextFetchButton = Yes
 DataViewAllFetchButton = Fetch all
 DataViewFetchErrorPrefix = Unable to execute query,
 ExecuteButton = Execute
+ExecuteButton_Mnemonic = E
 FetchDataTitle = Fetch Data
 ShowDataError = Unable to show data, {0}
+
+ACS_DataViewCancelButtonA11yDesc = No
+ACS_DataViewNextFetchButtonA11yDesc = Yes
+ACS_DataViewAllFetchButtonA11yDesc = Fetch all
+ACS_DataViewTextAreaA11yName = SQL command text area
+ACS_DataViewTextAreaA11yDesc = SQL command to execute.
+ACS_DataViewComboBoxA11yName = SQL command combo box
+ACS_DataViewComboBoxA11yDesc = Combo box containing all recent SQL commands.
+ACS_ExecuteButtonA11yDesc = Execute SQL command.
+ACS_DataViewTableA11yName = SQL query results
+ACS_DataViewTableA11yDesc = SQL query results.
+ACS_FetchDataTitleA11yDesc = Fetch Data
 
 # Refresh children
 
@@ -461,12 +580,27 @@ RefreshChildrenErrorPrefix = Unable to refresh children
 UnsupportedDialogTitle = Database is not supported by the system
 UnsupportedDialogDescription = This database is not supported by the system. The following options are available:
 UnsupportedDialogGenericButton = Connect as generic database system
+UnsupportedDialogGenericButton_Mnemonic = G
 UnsupportedDialogGenericText = Connect to the database and use SQL-92 standard commands (not supported by all databases).
 UnsupportedDialogReadOnlyButton = Connect in read-only mode
+UnsupportedDialogReadOnlyButton_Mnemonic = R
 UnsupportedDialogReadOnlyText = Connect without the ability to modify the database.
 UnsupportedDialogButtonOK = OK
+UnsupportedDialogButtonOK_Mnemonic = O
 UnsupportedDialogButtonCancel = Cancel
+UnsupportedDialogButtonCancel_Mnemonic = C
 ReadOnlyMode = Read Only Mode
+
+ACS_UnsupportedDialogDescriptionA11yName = Unsupported database description
+ACS_UnsupportedDialogDescriptionA11yDesc = This database is not supported by the system. The following options are available:
+ACS_UnsupportedDialogGenericButtonA11yDesc = Select this option to connect as generic database system.
+ACS_UnsupportedDialogGenericTextA11yName = SQL-92 standard connection description
+ACS_UnsupportedDialogGenericTextA11yDesc = Connect to the database and use SQL-92 standard commands (not supported by all databases).
+ACS_UnsupportedDialogReadOnlyButtonA11yDesc = Select this option to connect in read-only mode.
+ACS_UnsupportedDialogReadOnlyTextA11yName = Read-only connection description
+ACS_UnsupportedDialogReadOnlyTextA11yDesc = Connect without the ability to modify the database.
+ACS_UnsupportedDialogButtonOKA11yDesc = Connect
+ACS_UnsupportedDialogButtonCancelA11yDesc = Cancel
 
 // Booleans
 
@@ -730,6 +864,8 @@ EXC_PBConcurrentConn=This driver is used by another database connection; you hav
 EXC_UnableToCreateForeignNodeInfo=unable to create node information for foreign key
 AddUniqueIndex=Specify type of index:
 
+ACS_AddUniqueIndexA11yDesc=Specify type of index:
+
 # Connect dialog
 
 BasePanelTitle = Basic setting
@@ -738,18 +874,40 @@ BasePanelHint = Basic set of arguments to create database connection
 ExtendPanelHint = Selection of database schema to use in the connection
 ConnectDialogTitle = Connect
 ConnectDialogUserName = User name:
+ConnectDialogUserName_Mnemonic = U
 ConnectDialogPassword = Password:
+ConnectDialogPassword_Mnemonic = P
 ConnectDialogRememberPassword = Remember password during this session
+ConnectDialogRememberPassword_Mnemonic = R
 Product = Product
+Product_Mnemonic = O
+
+ACS_ConnectDialogUserNameA11yDesc = Database user name.
+ACS_ConnectDialogUserNameTextFieldA11yName = Database user name text field
+ACS_ConnectDialogUserNameTextFieldA11yDesc = Database user name.
+ACS_ConnectDialogPasswordA11yDesc = Database password.
+ACS_ConnectDialogPasswordTextFieldA11yName = Database password text field
+ACS_ConnectDialogPasswordTextFieldA11yDesc = Database password.
+ACS_ConnectDialogRememberPasswordA11yDesc = Select this checkbox to remember password during this session.
+ACS_ProductA11yDesc = Product name.
+ACS_ProductComboBoxA11yName = Product name combo box
+ACS_ProductComboBoxA11yDesc = Combo box containing all product names.
 
 # SchemaPanel
 SchemaDialogText=Select schema:
+SchemaDialogText_Mnemonic=S
 MSG_SchemaPanelComment=Select a database schema to use.
 MSG_SchemaPanelWarning=There is no schema with same name as user name. You need to choose one of the schemas. \n\
     Select a database schema to use.
 ERR_UnableObtainSchemas = Unable to obtain schema. \n\
     There is insufficient information to establish a connection to obtain list of schemas. Check database URL, user and password. \n\
     Driver message: {0}
+
+ACS_SchemaDialogTextA11yDesc=Select a database schema to use.
+ACS_SchemaDialogTextComboBoxA11yName=Schema combo box
+ACS_SchemaDialogTextComboBoxA11yDesc=Combo box containing all available schemas.
+ACS_SchemaPanelCommentA11yName=Schema panel description
+ACS_SchemaPanelCommentA11yDesc=Select a database schema to use.
 
 # Manifest
 OpenIDE-Module-Name=Database Explorer
