One mnemonic fixed.

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -580,7 +580,7 @@ RefreshChildrenErrorPrefix = Unable to refresh children
 UnsupportedDialogTitle = Database is not supported by the system
 UnsupportedDialogDescription = This database is not supported by the system. The following options are available:
 UnsupportedDialogGenericButton = Connect as generic database system
-UnsupportedDialogGenericButton_Mnemonic = G
+UnsupportedDialogGenericButton_Mnemonic = N
 UnsupportedDialogGenericText = Connect to the database and use SQL-92 standard commands (not supported by all databases).
 UnsupportedDialogReadOnlyButton = Connect in read-only mode
 UnsupportedDialogReadOnlyButton_Mnemonic = R
