IN=4175 New debugger functionality for the Orion

--- a/web.debug/src/org/netbeans/modules/web/debug/Bundle.properties
+++ b/web.debug/src/org/netbeans/modules/web/debug/Bundle.properties
@@ -65,3 +65,7 @@ CTL_InvalidBreakpointWarning=WARNING: The breakpoint you set in the generated se
 LBL_Deferred=deferred
 #NOI18N
 LBL____=<--->
+
+HINT_JSP_BREAKPOINT_ANNOTAION_SHORT_DESCRIPTION=JSP breakpoint
+
+HINT_JSP_BREAKPOINT=JSP breakpoint 1
