#16933 fixed by adding missing resources. Many forms regenerated by form editor.

--- a/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
@@ -33,10 +33,15 @@ MSG_use_dtd_as_document_type?=Do you want to use generated dtd as external docum
 MSG_file_err_1=Valid Java class name expected.
 SAXGeneratorFilePanel.Form.name=Output File Names
 SAXGeneratorCustomizer.interfaceLabel.text=Notification Interface:
+SAXGeneratorCustomizer.interfaceLabel.mne=I
 SAXGeneratorFilePanel.handlerImplLabel.text=Handler Implementation:
+SAXGeneratorFilePanel.handlerImplLabel.mne=H
 SAXGeneratorCustomizer.stubLabel.text=Dispatching Stub:
+SAXGeneratorCustomizer.stubLabel.mne=D
 SAXGeneratorCustomizer.parsletLabel.text=Parslets Interface:
+SAXGeneratorCustomizer.parsletLabel.mne="P"
 SAXGeneratorFilePanel.parsletImplLabel.text=Parslet Implementation:
+SAXGeneratorFilePanel.parsletImplLabel.mne=r
 PROP_save_it= Save Customized Bindings
 PROP_bindings_label=Location:
 
@@ -70,8 +75,11 @@ MSG_sax_progress_3=Opening generated SAX handler files in editor...
 ## SAXGeneratorVersionPanel.java
 SAXGeneratorVersionPanel.Form.name=General Options
 SAXGeneratorVersionPanel.jaxpLabel.text=JAXP Version:
+SAXGeneratorVersionPanel.jaxpLabel.mne=J
 SAXGeneratorCustomizer.versionLabel.text=SAX Parser Version:
+SAXGeneratorCustomizer.versionLabel.mne=S
 SAXGeneratorVersionPanel.propagateSAXCheckBox.text= Propagate SAX Events to Generated Handler
+SAXGeneratorVersionPanel.propagateSAXCheckBox.mne=P
 
 ## SelectFileDialog.java
 PROP_fileNameTitle=Select File Name
@@ -88,3 +96,8 @@ MSG_invalid=Invalid value entered.
 PROP_GenerateDTD=Generate DTD ...
 PROP_GenerateSAXHandler=SAX Document Handler Wizard ...
 PROP_GenerateDOMScanner=Generate DOM Tree Scanner ...
+
+MSG_invalid_dtd=The DTD is not in good shape. Aborting generation.
+
+MSG_sax_progress_done=SAX parser handler generation finished.
+MSG_action_failed=Action failed due to internal error!
