--- a/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
@@ -9,6 +9,9 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2001 Sun
 # Microsystems, Inc. All Rights Reserved.
 
+## a11y - SelectFileDialog
+ACSD_fileField=n/a
+
 
 ## ElementBindings.java
 DELIMITER_HANDLING=Container
