xtest.attributes shortened to xtest.attribs

--- a/o.n.core/test/build.xml
+++ b/o.n.core/test/build.xml
@@ -31,7 +31,7 @@ Microsystems, Inc. All Rights Reserved.
     
     <!-- default testtypes, attributes and executors -->
     <property name="xtest.testtype" value="unit"/>
-    <property name="xtest.attributes" value="stable"/>
+    <property name="xtest.attribs" value="stable"/>
     <property name="xtest.executors" value="code,ide"/>
     
     <!-- properties just for compiler -->
@@ -156,14 +156,14 @@ Microsystems, Inc. All Rights Reserved.
     
     <target name="config" depends="init">
         <!-- This task reads config file cfg-${xtest.testtype}.xml and selects all -->
-        <!-- testbags, which conforms to ${xtest.attributes} - is subset or equals -->
+        <!-- testbags, which conforms to ${xtest.attribs} - is subset or equals -->
         <test-configurator testtype="${xtest.testtype}" 
-                           testattributes="${xtest.attributes}"
+                           testattributes="${xtest.attribs}"
                            testexecutors="${xtest.executors}"/>
     </target>
     
     <target name="runtests" depends="config,cleanresults,buildtests">
-        <echo message="core tests, test type: ${xtest.testtype}, test attributes: ${xtest.attributes}"/>
+        <echo message="core tests, test type: ${xtest.testtype}, test attributes: ${xtest.attribs}"/>
         <test-executor paramClasspathProp="tbag.classpath"
                        paramPatternsetInProp="tbag.patternset.include"
                        paramPatternsetExProp="tbag.patternset.exclude"
@@ -413,7 +413,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
     
     <target name="printconfig">
-        <echo message="Default config is testtype: ${xtest.testtype}, attributes: ${xtest.attributes}."/>
+        <echo message="Default config is testtype: ${xtest.testtype}, attributes: ${xtest.attribs}."/>
     </target>
     
 </project>
