--- a/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
@@ -12,6 +12,29 @@
 ## a11y - SelectFileDialog
 ACSD_fileField=n/a
 
+## a11y - SAXGeneratorFilePanel
+ACSD_interfaceTextField=n/a
+ACSD_handlerImplTextField=n/a
+ACSD_stubTextField=n/a
+ACSD_parsletTextField=n/a
+ACSD_parsletImplTextField=n/a
+ACSD_saveTextField=n/a
+ACSD_saveCheckBox=n/a
+ACSN_saveCheckBox=n/a
+ACSD_SAXGeneratorFilePanel=n/a
+
+# a11y - SAXGeneratorVersionPanel
+ACSD_propagateSAXCheckBox=n/a
+ACSN_propagateSAXCheckBox=n/a
+ACSD_jaxpVersionComboBox=n/a
+ACSD_propagateSAXCheckBox=n/a
+ACSD_SAXGeneratorVersionPanel=n/a
+
+## a11y - SAXGeneratorParsletPanel
+ACSD_SAXGeneratorParsletPanel=n/a
+
+## a11y - SAXGeneratorMethodPanel
+ACSD_SAXGeneratorMethodPanel=n/a
 
 ## ElementBindings.java
 DELIMITER_HANDLING=Container
