--- a/extbrowser/build.xml
+++ b/extbrowser/build.xml
@@ -25,7 +25,7 @@ Microsystems, Inc. All Rights Reserved.
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
 
   <target name="compile">
-    <javac srcdir="src" destdir="src">
+    <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <include name="org/netbeans/modules/extbrowser/"/>
       <classpath>
         <!--<pathelement location="patches"/>-->
