--- a/extbrowser/webclient/build.xml
+++ b/extbrowser/webclient/build.xml
@@ -24,7 +24,7 @@ Microsystems, Inc. All Rights Reserved.
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../../nbbuild/nbantext.jar"/>
 
   <target name="compile">
-    <javac srcdir="../src" destdir="../src">
+    <javac srcdir="../src" destdir="../src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <include name="org/netbeans/modules/webclient/"/>
       <classpath>
         <!--<pathelement location="patches"/>-->
