--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties
@@ -9,6 +9,80 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2001 Sun
 # Microsystems, Inc. All Rights Reserved.
 
+## a11y - TreeDTDCustomizer
+ACSD_cbVersion=n/a
+ACSD_cbEncoding=n/a
+ACSD_TreeDTDCustomizer=n/a
+
+## a11y - TreeElementDeclCustomizer
+ACSD_TreeElementDeclCustomizer=n/a
+ACSD_nameField=n/a
+ACSD_contentField=n/a
+
+## a11y - TreeAttlistDeclAttributeDefCustomizer
+ACSD_TreeAttlistDeclAttributeDefCustomizer=n/a
+ACSD_elementNameField=n/a
+ACSD_nameField1=n/a
+ACSD_typeField=n/a
+ACSD_enumeratedField=n/a
+ACSD_defaultTypeField=n/a
+ACSD_defaultValueField=n/a
+
+## a11y - TreeEntityDeclCustomizer
+ACSD_TreeEntityDeclCustomizer=n/a
+ACSD_nameField2=n/a
+ACSD_typeCombo=n/a
+ACSD_internValueField=n/a
+ACSD_externPublicField=n/a
+ACSD_externSystemField=n/a
+ACSD_unparsedPublicField=n/a
+ACSD_unparsedSystemField=n/a
+ACSD_unparsedNotationField=n/a
+
+## a11y - TreeNotationDeclCustomizer
+ACSD_TreeNotationDeclCustomizer=a/n
+ACSD_nameField3=a/n
+ACSD_publicField2=a/n
+ACSD_systemField1=a/n
+
+## a11y - TreeDocumentCustomizer
+ACSD_TreeDocumentCustomizer=n/a
+ACSD_cbVersion=n/a
+ACSD_cbEncoding1=n/a
+ACSD_cbStandalone=n/a
+
+## a11y - TreeDocumentTypeCustomizer
+ACSD_TreeDocumentTypeCustomizer=n/a
+ACSD_nameField4=n/a
+ACSD_systemField2=n/a
+ACSD_publicField3=n/a
+
+## a11y - TreeCommentCustomizer
+ACSD_TreeCommentCustomizer=n/a
+ACSD_dataPanel=n/a
+
+## a11y - TreeProcessingInstructionCustomizer
+ACSD_TreeProcessingInstructionCustomizer=n/a
+ACSD_targetField=n/a
+ACSD_dataPane1=n/a
+
+## a11y - TreeCDATASectionCustomizer
+ACSD_TreeCDATASectionCustomizer=n/a
+ACSD_dataPanel2=n/a
+
+
+## a11y - TreeTextCustomizer
+ACSD_TreeTextCustomizer=n/a
+ACSD_dataPanel3=n/a
+
+## a11y - TreeCharacterReferenceCustomizer
+ACSD_TreeCharacterReferenceCustomizer=n/a
+ACSD_nameField5=n/a
+
+## a11y - TreeGeneralEntityReferenceCustomizer
+ACSD_TreeGeneralEntityReferenceCustomizer=n/a
+ACSD_nameField6=n/a
+
 
 ## SHARED
 ## [ TreeAttlistDeclAttributeDefCustomizer.java, TreeAttributeCustomizer.java, TreeDocumentTypeCustomizer.java, TreeElementCustomizer.java, TreeElementDeclCustomizer.java ]
@@ -95,7 +169,7 @@ LAB_ElementName=Name:
 LAB_EntityType=Type:
 LAB_EntityType2=Entity:
 RAD_Internal= Internal
-RAD_External= External
+RAD_External= null
 RAD_Unparsed= Unparsed
 LAB_Internal_Text=Text:
 LAB_External_PublicId=Public Id:
