--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties
@@ -83,6 +83,14 @@ ACSD_nameField5=n/a
 ACSD_TreeGeneralEntityReferenceCustomizer=n/a
 ACSD_nameField6=n/a
 
+## a11y - TreeElementCustomizer
+ACSD_TreeElementCustomizer=n/a
+ACSD_nameField7=n/a
+
+## a11y - TreeAttlistDeclCustomizer
+ACSD_TreeAttlistDeclCustomizer=n/a
+ACSD_elemNameField=n/a
+
 
 ## SHARED
 ## [ TreeAttlistDeclAttributeDefCustomizer.java, TreeAttributeCustomizer.java, TreeDocumentTypeCustomizer.java, TreeElementCustomizer.java, TreeElementDeclCustomizer.java ]
