--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/editor/Bundle.properties
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/editor/Bundle.properties
@@ -9,6 +9,32 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2001 Sun
 # Microsystems, Inc. All Rights Reserved.
 
+## a11y - TreeElementAttributeListCustomizer
+ACSD_TreeElementAttributeListCustomizer=n/a
+ACSD_addButton=n/a
+ACSD_upButton=n/a
+ACSD_removeButton=n/a
+ACSD_attrTable=n/a
+ACSN_attrTable=n/a
+
+# a11y - TreeAttlistDeclAttributeListCustomizer
+ACSD_TreeAttlistDeclAttributeListCustomizer=n/a
+ACSD_attrTable1=n/a
+ACSN_attrTable1=n/a
+
+## a11y - NullStringCustomEditor
+ACSD_NullStringCustomEditor=n/a
+ACSD_textArea=n/a
+
+## a11y - TreeNodeFilterCustomEditor
+ACSD_TreeNodeFilterCustomEditor=n/a
+ACSD_acceptRejectLabel=n/a
+ACSD_rejectRadioButton=n/a
+ACSD_addButton1=n/a
+ACSD_removeButton1=n/a
+ACSD_nodeTypesTable=n/a
+ACSN_nodeTypesTable=n/a
+
 
 ## NullStringEditor.java
 TEXT_DEFAULT=<DEFAULT>
