--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -31,8 +31,8 @@ CTL_SetArgumentsTitle=Set Arguments
 CTL_SetArguments=Arguments:
 CTL_SetArguments_Mnemonic=A
 MSG_ArgumentsCannotBeSet=The arguments cannot be set. You are probably trying to set arguments for a file that is in a read-only filesystem.
-ACS_ArgFiels.a11n.Name=Arguments for building
-ACS_ArgFiels.a11n.Desc=Arguments for building
+ACSD_ArgField=n/a
+ACSD_SetArgumentsAction=n/a
 
 #EmptyAction
 #testing action
