--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -35,12 +35,18 @@ LABEL_WelcomeHTMLPages=To get started, choose a task below.
 LABEL_WelcomeTipPages=Tip of the Day
 CTL_CLOSE=Close
 
-# INIT a11y
+# a11y - ModuleSelectionPanel
 ACSD_tableLabel=n/a
+ACSN_tableLabel=n/a
 ACSD_descriptionLabel=n/a
+ACSN_descriptionLabel=n/a
+ACSD_ModuleSelectionPanel=n/a
 
+# a11y - WelcomePanel
 ACSD_nextTipButton=n/a
+ACSN_nextTipButton=n/a
 ACSD_prevTipButton=n/a
+ACSN_prevTipButton=n/a
 ACSD_contextBrowser=n/a
 ACSN_contextBrowser=n/a
 ACSD_tipsBrowser=n/a
@@ -50,9 +56,15 @@ ACSN_closeButton=n/a
 ACSD_showOnStartupCheckBox=n/a
 ACSN_showOnStartupCheckBox=n/a
 
+# a11y - IDESettingsPanel
 ACSD_proxyCheckBox=n/a
+ACSN_proxyCheckBox=n/a
 ACSD_sdiRadioButton=n/a
+ACSN_sdiRadioButton=n/a
 ACSD_mdiRadioButton=n/a
+ACSN_mdiRadioButton=n/a
+ACSD_browserComboBox=n/a
+ACSD_IDESettingsPanel=n/a
 
 #Title of the new from template dialog
 #{0} = comment passed by the panel
@@ -236,4 +248,6 @@ CTL_ModuleSelectFilter=JAR Files (*.jar)
 #LBL_Description=Description:
 LBL_SetupWizardModuleInstallation=Module Installation
 LBL_SetupWizardDescription=Description:
+LBL_SetupWizardDescription_MNE=D
 LBL_SetupWizardCheckModules=Check modules to enable:
+LBL_SetupWizardCheckModules_MNE=C
