--- a/xml.tax/build.xml
+++ b/xml.tax/build.xml
@@ -31,6 +31,8 @@ Microsystems, Inc. All Rights Reserved.
     <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="${nbext_root}/nbantext.jar"/>
 
+    <property name="build.compiler.debug" value="on"/>
+
 
     <target name="init">
         <tstamp/>
