--- a/editor/src/org/netbeans/modules/editor/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/Bundle.properties
@@ -19,3 +19,6 @@ Services/IndentEngine/org-netbeans-modules-editor-java-JavaIndentEngine.settings
 Services/IndentEngine/org-netbeans-modules-editor-SimpleIndentEngine.settings=Simple Indentation Engine
 Templates/Services/IndentEngine/org-netbeans-modules-editor-java-JavaIndentEngine.settings=Java Indentation Engine
 Templates/Services/IndentEngine/org-netbeans-modules-editor-SimpleIndentEngine.settings=Simple Indentation Engine
+
+MSG_NegativeValue=Negative value is not allowed
+MSG_OutOfRange=Value is out of range
